[GH-29] refactor(mvn): change build tools