@@ -12,4 +12,5 @@ export SPRING_PROFILES_ACTIVE="${SPRING_PROFILES_ACTIVE:-"loc"}"
 
 mvn clean compile spring-boot:process-aot package \
   -Dmaven.build.cache.enabled=false \
+  -Dspring-boot.run.jvmArguments="--add-opens=java.base/java.lang=ALL-UNNAMED" \
   -f ./pom.xml
